Update code to use latest xradio release.

--- a/examples/example_graph_build.ipynb
+++ b/examples/example_graph_build.ipynb
@@ -28,8 +28,9 @@
     }
    ],
    "source": [
-    "#Download example dataset(835 MB)\n",
+    "# Download example dataset(835 MB)\n",
     "import gdown\n",
+    "\n",
     "url = \"https://drive.google.com/u/1/uc?id=16-jgsWDYkdZdRPxnXMlRUdfyS3ihj4g_&export=download\"\n",
     "output = \"small_ngvla_sim.zarr.zip\"\n",
     "gdown.download(url, output)"
@@ -43,6 +44,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.unpack_archive(filename=\"small_ngvla_sim.zarr.zip\", extract_dir=\".\")"
    ]
   },
@@ -83,9 +85,10 @@
    ],
    "source": [
     "from viper.dio._utils._io import _load_mxds\n",
-    "mxds_name = 'small_ngvla_sim.zarr'\n",
-    "sel_parms = {'xds_id':[0,1,2]}\n",
-    "mxds = _load_mxds(mxds_name,sel_parms)"
+    "\n",
+    "mxds_name = \"small_ngvla_sim.zarr\"\n",
+    "sel_parms = {\"xds_id\": [0, 1, 2]}\n",
+    "mxds = _load_mxds(mxds_name, sel_parms)"
    ]
   },
   {
@@ -107,7 +110,7 @@
     }
    ],
    "source": [
-    "mxds[0] # 1, 2"
+    "mxds[0]  # 1, 2"
    ]
   },
   {
@@ -1199,9 +1202,9 @@
     }
    ],
    "source": [
-    "#Create Graph\n",
-    "parallel_coords = mxds[0] #using first xds as the parallel_coords\n",
-    "parallel_dims = ['chan','time'] #['pol','time','baseline']\n",
+    "# Create Graph\n",
+    "parallel_coords = mxds[0]  # using first xds as the parallel_coords\n",
+    "parallel_dims = [\"chan\", \"time\"]  # ['pol','time','baseline']\n",
     "\n",
     "parallel_coords"
    ]
@@ -1216,13 +1219,17 @@
     "def cube_imaging_chunk(input_parms):\n",
     "    from viper._utils._io import _open_no_dask_zarr\n",
     "    import os\n",
-    "    mxds_name = input_parms['mxds_name']\n",
-    "    \n",
+    "\n",
+    "    mxds_name = input_parms[\"mxds_name\"]\n",
+    "\n",
     "    mxds = {}\n",
-    "    for xds_id in input_parms['data_sel']:\n",
-    "        mxds[xds_id] =_open_no_dask_zarr(os.path.join(mxds_name,'xds'+str(xds_id)),input_parms['data_sel'][xds_id])\n",
-    "        print(mxds,'\\n ********')\n",
-    "    \n",
+    "    for xds_id in input_parms[\"data_sel\"]:\n",
+    "        mxds[xds_id] = _open_no_dask_zarr(\n",
+    "            os.path.join(mxds_name, \"xds\" + str(xds_id)),\n",
+    "            input_parms[\"data_sel\"][xds_id],\n",
+    "        )\n",
+    "        print(mxds, \"\\n ********\")\n",
+    "\n",
     "    return \"Hallo from chunk\" + str(input_parms[\"chunk_id\"])"
    ]
   },
@@ -1256,7 +1263,14 @@
    ],
    "source": [
     "from viper._utils._graph_tools import _build_perfectly_parallel_graph\n",
-    "graph = _build_perfectly_parallel_graph('small_ngvla_sim.zarr',sel_parms,parallel_coords=parallel_coords,parallel_dims=parallel_dims,func_chunk=cube_imaging_chunk)\n",
+    "\n",
+    "graph = _build_perfectly_parallel_graph(\n",
+    "    \"small_ngvla_sim.zarr\",\n",
+    "    sel_parms,\n",
+    "    parallel_coords=parallel_coords,\n",
+    "    parallel_dims=parallel_dims,\n",
+    "    func_chunk=cube_imaging_chunk,\n",
+    ")\n",
     "graph = _build_gather_graph(graph)"
    ]
   },
@@ -1284,7 +1298,8 @@
    ],
    "source": [
     "import dask\n",
-    "dask.visualize(graph,filename='perfectly_parallel_graph.png')"
+    "\n",
+    "dask.visualize(graph, filename=\"perfectly_parallel_graph.png\")"
    ]
   },
   {
@@ -2172,6 +2187,7 @@
    ],
    "source": [
     "import dask\n",
+    "\n",
     "result = dask.compute(graph)"
    ]
   },
