--- a/face_2_face/astroviper_installation_test.ipynb
+++ b/face_2_face/astroviper_installation_test.ipynb
@@ -43,15 +43,16 @@
     "try:\n",
     "    import astroviper\n",
     "\n",
-    "    print('astroVIPER version', version('astroviper'), 'already installed.')\n",
+    "    print(\"astroVIPER version\", version(\"astroviper\"), \"already installed.\")\n",
     "except ImportError as e:\n",
     "    print(e)\n",
-    "    print('Installing astroVIPER')\n",
+    "    print(\"Installing astroVIPER\")\n",
     "\n",
     "    os.system(\"pip install astroviper\")\n",
     "\n",
     "    import xradio\n",
-    "    print('astroVIPER version', version('astroviper'), ' installed.')"
+    "\n",
+    "    print(\"astroVIPER version\", version(\"astroviper\"), \" installed.\")"
    ]
   },
   {
@@ -69,13 +70,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
+    "\"\"\"\n",
     "import pkg_resources\n",
     "casa_data_dir = pkg_resources.resource_filename('casadata', '__data__')\n",
     "rc_file = open(os.path.expanduser(\"~/.casarc\"), \"a+\")  # append mode\n",
     "rc_file.write(\"\\n measures.directory: \" + casa_data_dir)\n",
     "rc_file.close()\n",
-    "'''"
+    "\"\"\""
    ]
   },
   {
@@ -119,17 +120,21 @@
     "\n",
     "infile = \"Antennae_North.cal.lsrk.split.ms\"\n",
     "outfile = \"Antennae_North.cal.lsrk.split.vis.zarr\"\n",
-    "download(file=\"Antennae_North.cal.lsrk.split.ms\",source='dropbox')\n",
+    "download(file=\"Antennae_North.cal.lsrk.split.ms\", source=\"dropbox\")\n",
     "\n",
     "from xradio.vis.convert_msv2_to_processing_set import convert_msv2_to_processing_set\n",
     "\n",
-    "partition_scheme=\"ddi_intent_field\"\n",
+    "partition_scheme = \"ddi_intent_field\"\n",
     "\n",
-    "chunks_on_disk = {'frequency':3}\n",
-    "convert_msv2_to_processing_set(infile=infile, outfile=outfile, \n",
-    "                               partition_scheme=partition_scheme,\n",
-    "                               parallel=False,overwrite=True,\n",
-    "                               chunks_on_disk=chunks_on_disk)\n"
+    "chunks_on_disk = {\"frequency\": 3}\n",
+    "convert_msv2_to_processing_set(\n",
+    "    infile=infile,\n",
+    "    outfile=outfile,\n",
+    "    partition_scheme=partition_scheme,\n",
+    "    parallel=False,\n",
+    "    overwrite=True,\n",
+    "    chunks_on_disk=chunks_on_disk,\n",
+    ")"
    ]
   },
   {
@@ -150,13 +155,12 @@
     "ps_name = outfile\n",
     "\n",
     "from xradio.vis.read_processing_set import read_processing_set\n",
-    "#sel_parms = {'xds_id':[0,1,2]}\n",
-    "#fields = [\"NGC4038 - Antennae North\"]\n",
+    "\n",
+    "# sel_parms = {'xds_id':[0,1,2]}\n",
+    "# fields = [\"NGC4038 - Antennae North\"]\n",
     "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
     "fields = None\n",
-    "ps = read_processing_set(ps_name,\n",
-    "                        intents=intents,\n",
-    "                        fields=fields)\n",
+    "ps = read_processing_set(ps_name, intents=intents, fields=fields)\n",
     "ps.summary()"
    ]
   },
@@ -175,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms_xds = ps[list(ps.keys())[0]] "
+    "ms_xds = ps[list(ps.keys())[0]]"
    ]
   },
   {
@@ -204,9 +208,11 @@
     "from astroviper._concurrency._graph_tools import _make_parallel_coord\n",
     "\n",
     "parallel_coords = {}\n",
-    "n_chunks=3\n",
-    "parallel_coords['frequency'] = _make_parallel_coord(coord=ms_xds.frequency, n_chunks=n_chunks)\n",
-    "parallel_coords['frequency']"
+    "n_chunks = 3\n",
+    "parallel_coords[\"frequency\"] = _make_parallel_coord(\n",
+    "    coord=ms_xds.frequency, n_chunks=n_chunks\n",
+    ")\n",
+    "parallel_coords[\"frequency\"]"
    ]
   },
   {
@@ -227,26 +233,28 @@
     "from astroviper._concurrency._graph_tools import _map\n",
     "import dask\n",
     "\n",
-    "def my_func(input_parms):\n",
-    "    print('Keys in input parameters: ',list(input_parms.keys()))\n",
-    "    print('Test_input:', input_parms['test_input'])\n",
-    "    print('data_sel',input_parms['data_sel'])\n",
-    "    print('chunk_coords',input_parms['chunk_coords'])\n",
-    "    print('chunk_indices',input_parms['chunk_indices'])\n",
-    "    print('chunk_id',input_parms['chunk_id'])\n",
-    "    print('*****'*10)\n",
-    "    return input_parms['test_input']\n",
     "\n",
-    "#['test_input', 'input_data_name', 'viper_local_dir', 'date_time', 'data_sel', 'chunk_coords', 'chunk_indx', 'chunk_id', 'parallel_dims']\n",
-    "input_parms= {}\n",
-    "input_parms['test_input'] = 42\n",
+    "def my_func(input_parms):\n",
+    "    print(\"Keys in input parameters: \", list(input_parms.keys()))\n",
+    "    print(\"Test_input:\", input_parms[\"test_input\"])\n",
+    "    print(\"data_sel\", input_parms[\"data_sel\"])\n",
+    "    print(\"chunk_coords\", input_parms[\"chunk_coords\"])\n",
+    "    print(\"chunk_indices\", input_parms[\"chunk_indices\"])\n",
+    "    print(\"chunk_id\", input_parms[\"chunk_id\"])\n",
+    "    print(\"*****\" * 10)\n",
+    "    return input_parms[\"test_input\"]\n",
+    "\n",
+    "\n",
+    "# ['test_input', 'input_data_name', 'viper_local_dir', 'date_time', 'data_sel', 'chunk_coords', 'chunk_indx', 'chunk_id', 'parallel_dims']\n",
+    "input_parms = {}\n",
+    "input_parms[\"test_input\"] = 42\n",
     "\n",
     "sel_parms = {}\n",
     "sel_parms[\"fields\"] = [\"NGC4038 - Antennae North\"]\n",
     "sel_parms[\"intents\"] = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
     "graph = _map(\n",
-    "    input_data_name = ps_name,\n",
-    "    input_data_type = 'processing_set',\n",
+    "    input_data_name=ps_name,\n",
+    "    input_data_type=\"processing_set\",\n",
     "    ps_sel_parms=sel_parms,\n",
     "    parallel_coords=parallel_coords,\n",
     "    func_chunk=my_func,\n",
@@ -292,11 +300,13 @@
    "source": [
     "from astroviper._concurrency._graph_tools import _reduce\n",
     "\n",
-    "def my_sum(input_1, input_2, input_parms):\n",
-    "    return input_1 + input_2 + input_parms['test_input']\n",
     "\n",
-    "input_parms= {}\n",
-    "input_parms['test_input'] = 5\n",
+    "def my_sum(input_1, input_2, input_parms):\n",
+    "    return input_1 + input_2 + input_parms[\"test_input\"]\n",
+    "\n",
+    "\n",
+    "input_parms = {}\n",
+    "input_parms[\"test_input\"] = 5\n",
     "graph_reduce = _reduce(graph, my_sum, input_parms)\n",
     "dask.visualize(graph_reduce)"
    ]
@@ -316,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask.compute(graph_reduce) "
+    "dask.compute(graph_reduce)"
    ]
   }
  ],
