added comments with timing info

--- a/docs/feather_tutorial.ipynb
+++ b/docs/feather_tutorial.ipynb
@@ -31,7 +31,15 @@
    "outputs": [],
    "source": [
     "from astroviper.imaging import feather\n",
-    "feather(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.zarr', lowres= 'sd.zarr', sdfactor=1)"
+    "import time\n",
+    "b = time.time()\n",
+    "# input CASA images\n",
+    "# time to run feather: 440 s\n",
+    "feather(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.im', lowres= 'sd.im', sdfactor=1)\n",
+    "# input zarr images\n",
+    "# time to run feather, 260 s\n",
+    "# feather(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.zarr', lowres= 'sd.zarr', sdfactor=1)\n",
+    "time.time() - b"
    ]
   },
   {
@@ -43,11 +51,15 @@
    "source": [
     "from xradio.image import load_image, read_image\n",
     "feather_xds = load_image(\"feathered_image.img.zarr\")\n",
+    "nl = len(feather_xds.l)\n",
+    "nm = len(feather_xds.m)\n",
     "\n",
+    "l_ext = slice(int(nl/2 - 100), int(nl/2 + 100))\n",
+    "m_ext = slice(int(nm/2 - 100), int(nm/2 + 100))\n",
     "\n",
     "import numpy as np\n",
     "np.nanmax(np.abs(feather_xds.SKY.values))\n",
-    "feather_xds.SKY.isel(polarization=0,frequency=1).plot()"
+    "feather_xds.SKY.isel(polarization=0,frequency=1, l=l_ext, m=m_ext).plot()"
    ]
   },
   {
