update variable names

--- a/docs/feather_tutorial.ipynb
+++ b/docs/feather_tutorial.ipynb
@@ -35,7 +35,7 @@
     "b = time.time()\n",
     "# input CASA images\n",
     "# time to run feather: 440 s\n",
-    "feather(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.im', lowres= 'sd.im', sdfactor=1)\n",
+    "feather(out_im={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, high_res= 'int.im', low_res= 'sd.im', sdfactor=1)\n",
     "# input zarr images\n",
     "# time to run feather, 260 s\n",
     "# feather(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.zarr', lowres= 'sd.zarr', sdfactor=1)\n",
