--- a/dev/phase_shift/broadcasting_demo.ipynb
+++ b/dev/phase_shift/broadcasting_demo.ipynb
@@ -111,12 +111,12 @@
     "\n",
     "```Python\n",
     "A      (4d array):  8 x 1 x 6 x 1\n",
-    "B      (3d array):  8 x 7 x 1 x 5\n",
+    "B      (3d array):      7 x 1 x 5\n",
     "```\n",
     "becomes\n",
     "```Python\n",
     "A      (4d array):   8  x [7] x  6  x 1\n",
-    "B      (3d array):   8 x  7 x [6] x 5\n",
+    "B      (4d array):  [8] x  7 x [6] x 5\n",
     "Result (4d array):   8  x  7 x  6  x 5\n",
     "```"
    ]
