--- a/docs/astroviper_feather_tutorial.ipynb
+++ b/docs/astroviper_feather_tutorial.ipynb
@@ -30,6 +30,7 @@
     "# viper_client = local_client(cores=4, memory_limit=\"4GB\")\n",
     "\n",
     "import dask\n",
+    "\n",
     "dask.config.set(scheduler=\"synchronous\")\n",
     "# dask.config.set(scheduler=\"threads\")"
    ]
@@ -722,19 +723,18 @@
    ],
    "source": [
     "from xradio.image import read_image\n",
+    "\n",
     "# single dish image\n",
     "sd_xds = read_image(\"sd.zarr\")\n",
-    "chans_per_chunk = 2**28/(sd_xds.dims[\"l\"]*sd_xds.dims[\"m\"])\n",
+    "chans_per_chunk = 2**28 / (sd_xds.dims[\"l\"] * sd_xds.dims[\"m\"])\n",
     "chans_per_chunk = min(sd_xds.dims[\"frequency\"], chans_per_chunk)\n",
-    "chunksize = {\n",
-    "    \"frequency\": chans_per_chunk, \"l\": sd_xds.dims[\"l\"],\n",
-    "    \"m\": sd_xds.dims[\"m\"]\n",
-    "}\n",
+    "chunksize = {\"frequency\": chans_per_chunk, \"l\": sd_xds.dims[\"l\"], \"m\": sd_xds.dims[\"m\"]}\n",
     "sd_xds[\"sky\"].chunk(chunksize)\n",
     "\n",
     "### add multibeam\n",
     "from xradio.image._util.common import _set_multibeam_array\n",
     "import dask.array as da\n",
+    "\n",
     "del sd_xds.attrs[\"beam\"]\n",
     "sky_shape = sd_xds[\"sky\"].shape\n",
     "beam_shape = sky_shape[:3] + (3,)\n",
@@ -1426,16 +1426,14 @@
    "source": [
     "# interferometer image\n",
     "int_xds = read_image(\"int.zarr\")\n",
-    "chunksize = {\n",
-    "    \"frequency\": chans_per_chunk, \"l\": sd_xds.dims[\"l\"],\n",
-    "    \"m\": sd_xds.dims[\"m\"]\n",
-    "}\n",
+    "chunksize = {\"frequency\": chans_per_chunk, \"l\": sd_xds.dims[\"l\"], \"m\": sd_xds.dims[\"m\"]}\n",
     "int_xds[\"sky\"].chunk(chunksize)\n",
     "int_xds.beam\n",
     "\n",
     "# add multibeam\n",
     "from xradio.image._util.common import _set_multibeam_array\n",
     "import dask.array as da\n",
+    "\n",
     "del int_xds.attrs[\"beam\"]\n",
     "beam_ary = da.zeros(beam_shape)\n",
     "beam_ary[:, :, :, 0] = 0.0003175938332518091\n",
@@ -1443,7 +1441,7 @@
     "beam_ary[:, :, :, 2] = -0.054892581207198074\n",
     "int_xds = _set_multibeam_array(int_xds, beam_ary, \"rad\")\n",
     "###\n",
-    "int_xds\n"
+    "int_xds"
    ]
   },
   {
@@ -1466,18 +1464,15 @@
    "source": [
     "from astropy import units as u\n",
     "\n",
+    "\n",
     "def _beam_area_single_beam(xds):\n",
     "    beam = xds.attrs[\"beam\"]\n",
     "    bmaj = beam[\"major\"]\n",
-    "    major = u.Quantity(\n",
-    "        f\"{bmaj['value']}{bmaj['units']}\"\n",
-    "    )\n",
+    "    major = u.Quantity(f\"{bmaj['value']}{bmaj['units']}\")\n",
     "    bmin = beam[\"minor\"]\n",
-    "    minor = u.Quantity(\n",
-    "        f\"{bmin['value']}{bmin['units']}\"\n",
-    "    )\n",
+    "    minor = u.Quantity(f\"{bmin['value']}{bmin['units']}\")\n",
     "    area = major * minor\n",
-    "    return area.to(u.rad*u.rad)\n",
+    "    return area.to(u.rad * u.rad)\n",
     "\n",
     "    \"\"\"\n",
     "    elif \"beams\" in xds.data_vars:\n",
@@ -1503,20 +1498,18 @@
     "    else:\n",
     "        raise RuntimeError(\"xds has no beam (single or multiple\")\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "\n",
     "def has_single_beam(xds):\n",
     "    return \"beam\" in xds.attrs and xds.attrs[\"beam\"]\n",
-    "    \n",
+    "\n",
+    "\n",
     "# beam_ratio will be a scalar if both images have a single\n",
     "# beam, if not this computation needs to be done in the node\n",
     "# task since it will be per plane\n",
     "beam_ratio = None\n",
     "if has_single_beam(sd_xds) and has_single_beam(int_xds):\n",
-    "    beam_ratio = (\n",
-    "        _beam_area_single_beam(int_xds\n",
-    "        )/_beam_area_single_beam(sd_xds)\n",
-    "    )\n",
+    "    beam_ratio = _beam_area_single_beam(int_xds) / _beam_area_single_beam(sd_xds)\n",
     "beam_ratio"
    ]
   },
@@ -1572,10 +1565,14 @@
     }
    ],
    "source": [
-    "from graphviper.graph_tools.coordinate_utils import interpolate_data_coords_onto_parallel_coords\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    interpolate_data_coords_onto_parallel_coords,\n",
+    ")\n",
     "\n",
     "input_data = {\"img\": sd_xds}\n",
-    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(parallel_coords, input_data)\n",
+    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(\n",
+    "    parallel_coords, input_data\n",
+    ")\n",
     "display(HTML(dict_to_html(node_task_data_mapping)))"
    ]
   },
@@ -1586,7 +1583,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from xradio.image import make_empty_aperture_image\n",
     "import numpy as np\n",
     "from astropy import units as u\n",
@@ -1594,9 +1590,7 @@
     "\n",
     "def compute_u_v(xds):\n",
     "    shape = [xds.dims[\"l\"], xds.dims[\"m\"]]\n",
-    "    sics = np.abs(\n",
-    "        xds.attrs[\"direction\"][\"reference\"][\"cdelt\"]\n",
-    "    )\n",
+    "    sics = np.abs(xds.attrs[\"direction\"][\"reference\"][\"cdelt\"])\n",
     "    w_xds = make_empty_aperture_image(\n",
     "        phase_center=[0, 0],\n",
     "        image_size=shape,\n",
@@ -1608,10 +1602,11 @@
     "    u = np.zeros(shape)\n",
     "    v = np.zeros(shape)\n",
     "    for i, ux in enumerate(w_xds.coords[\"u\"]):\n",
-    "        u[i,:] = ux\n",
+    "        u[i, :] = ux\n",
     "    for i, vx in enumerate(w_xds.coords[\"v\"]):\n",
     "        v[:, i] = vx\n",
     "    return (u, v)\n",
+    "\n",
     "\n",
     "def compute_w_single_beam(xds):\n",
     "    \"\"\"xds is the single dish (low res)\n",
@@ -1634,28 +1629,19 @@
     "    \"\"\"\n",
     "    w = np.zeros(shape)\n",
     "    bmaj = xds.attrs[\"beam\"][\"major\"]\n",
-    "    alpha = u.Quantity(\n",
-    "        f\"{bmaj['value']}{bmaj['units']}\"\n",
-    "    )\n",
+    "    alpha = u.Quantity(f\"{bmaj['value']}{bmaj['units']}\")\n",
     "    alpha = alpha.to(u.rad).value\n",
     "    bmin = xds.attrs[\"beam\"][\"minor\"]\n",
-    "    beta = u.Quantity(\n",
-    "        f\"{bmin['value']}{bmin['units']}\"\n",
-    "    )\n",
+    "    beta = u.Quantity(f\"{bmin['value']}{bmin['units']}\")\n",
     "    beta = beta.to(u.rad).value\n",
     "    bpa = xds.attrs[\"beam\"][\"pa\"]\n",
-    "    phi = u.Quantity(\n",
-    "        f\"{bpa['value']}{bpa['units']}\"\n",
-    "    )\n",
+    "    phi = u.Quantity(f\"{bpa['value']}{bpa['units']}\")\n",
     "    phi = phi.to(u.rad).value\n",
-    "    alpha2 = alpha*alpha\n",
-    "    beta2 = beta*beta\n",
-    "    aterm2 = (uu*np.sin(phi) - vv*np.cos(phi))**2\n",
-    "    bterm2 = (uu*np.cos(phi) + vv*np.sin(phi))**2\n",
-    "    w = np.exp(\n",
-    "        -pi2/4.0/np.log(2)\n",
-    "        * (alpha2*aterm2 + beta2*bterm2)\n",
-    "    )\n",
+    "    alpha2 = alpha * alpha\n",
+    "    beta2 = beta * beta\n",
+    "    aterm2 = (uu * np.sin(phi) - vv * np.cos(phi)) ** 2\n",
+    "    bterm2 = (uu * np.cos(phi) + vv * np.sin(phi)) ** 2\n",
+    "    w = np.exp(-pi2 / 4.0 / np.log(2) * (alpha2 * aterm2 + beta2 * bterm2))\n",
     "    # w is an np.array\n",
     "    return w.astype(xds[\"sky\"].dtype)\n",
     "\n",
@@ -1664,7 +1650,7 @@
     "uv = (None, None)\n",
     "if has_single_beam(sd_xds):\n",
     "    # w is a shape [l, m] np.array. If not computed\n",
-    "    # here, it will be computed on a per chunk basis \n",
+    "    # here, it will be computed on a per chunk basis\n",
     "    # inside the node task\n",
     "    w = compute_w_single_beam(sd_xds)\n",
     "else:\n",
@@ -1676,11 +1662,12 @@
     "\n",
     "if w:\n",
     "    from matplotlib import pyplot as plt\n",
+    "\n",
     "    plt.rcParams[\"figure.figsize\"] = [7.00, 3.50]\n",
     "    plt.rcParams[\"figure.autolayout\"] = True\n",
     "    im = plt.imshow(w, cmap=\"copper_r\")\n",
     "    plt.colorbar(im)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -1704,7 +1691,7 @@
    "source": [
     "import copy\n",
     "from astroviper._domain._imaging._fft import _fft_lm_to_uv\n",
-    "from astroviper._domain._imaging._ifft import _ifft_uv_to_lm \n",
+    "from astroviper._domain._imaging._ifft import _ifft_uv_to_lm\n",
     "from graphviper.graph_tools.map import map\n",
     "import dask\n",
     "import numpy as np\n",
@@ -1714,9 +1701,6 @@
     "def _feather(input_parms):\n",
     "    display(HTML(dict_to_html(input_parms)))\n",
     "\n",
-    "\n",
-    "        \n",
-    "    \n",
     "    def _compute_w_multiple_beams(xds, uv):\n",
     "        \"\"\"xds is the single dish xds\"\"\"\n",
     "        beams = xds[\"beam\"]\n",
@@ -1741,42 +1725,34 @@
     "        bpa = np.expand_dims(bpa, -1)\n",
     "        phi = bpa * u.Unit(bunit)\n",
     "        phi = phi.to(u.rad).value\n",
-    "        \n",
-    "        alpha2 = alpha*alpha\n",
-    "        beta2 = beta*beta\n",
+    "\n",
+    "        alpha2 = alpha * alpha\n",
+    "        beta2 = beta * beta\n",
     "        # u -> uu, v -> vv because we've already used\n",
     "        # u for astropy.units\n",
     "        uu, vv = uv\n",
     "        uu = uu[np.newaxis, np.newaxis, np.newaxis, :, :]\n",
     "        vv = vv[np.newaxis, np.newaxis, np.newaxis, :, :]\n",
     "        print(\"u v shape\", uu.shape, vv.shape)\n",
-    "        aterm2 = (uu*np.sin(phi) - vv*np.cos(phi))**2\n",
-    "        print(\"aterm2, shape\",aterm2.shape)\n",
-    "        bterm2 = (uu*np.cos(phi) + vv*np.sin(phi))**2\n",
+    "        aterm2 = (uu * np.sin(phi) - vv * np.cos(phi)) ** 2\n",
+    "        print(\"aterm2, shape\", aterm2.shape)\n",
+    "        bterm2 = (uu * np.cos(phi) + vv * np.sin(phi)) ** 2\n",
     "        print(\"bterm2 shape\", bterm2.shape)\n",
     "        w = np.exp(\n",
-    "            -np.pi*np.pi/4.0/np.log(2)\n",
-    "            * (\n",
-    "                alpha2*aterm2 + beta2*bterm2\n",
-    "            )\n",
+    "            -np.pi * np.pi / 4.0 / np.log(2) * (alpha2 * aterm2 + beta2 * bterm2)\n",
     "        )\n",
     "        # w is an np.array\n",
     "        return w\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
     "    from xradio.image import load_image\n",
-    "    # if input_parms[\"input_data\"] is None: #Load \n",
+    "\n",
+    "    # if input_parms[\"input_data\"] is None: #Load\n",
     "    dtypes = [np.int32, np.int32]\n",
     "    for i, data_store in enumerate(input_parms[\"input_data_store\"]):\n",
-    "        xds = load_image(\n",
-    "            data_store, \n",
-    "            block_des=input_parms[\"data_selection\"][\"img\"]\n",
-    "        )\n",
+    "        xds = load_image(data_store, block_des=input_parms[\"data_selection\"][\"img\"])\n",
     "        fft_plane = (\n",
-    "            xds['sky'].dims.index(input_parms[\"axes\"][0]),\n",
-    "            xds['sky'].dims.index(input_parms[\"axes\"][1])\n",
+    "            xds[\"sky\"].dims.index(input_parms[\"axes\"][0]),\n",
+    "            xds[\"sky\"].dims.index(input_parms[\"axes\"][1]),\n",
     "        )\n",
     "        # else:\n",
     "        #   img_xds = input_parms[\"input_data\"]['img'] #In memory\n",
@@ -1800,22 +1776,20 @@
     "    if not beam_ratio:\n",
     "        if \"beam\" in int_xds.data_vars:\n",
     "            # compute area for multiple beams\n",
-    "            int_ba = (\n",
-    "                int_xds[\"beam\"].sel(beam_param=\"major\")\n",
-    "                * int_xds[\"beam\"].sel(beam_param=\"minor\")\n",
+    "            int_ba = int_xds[\"beam\"].sel(beam_param=\"major\") * int_xds[\"beam\"].sel(\n",
+    "                beam_param=\"minor\"\n",
     "            )\n",
     "        else:\n",
     "            int_ba = _beam_area_single_beam(int_xds)\n",
-    "        \n",
-    "        if \"beam\"in sd_xds.data_vars:\n",
+    "\n",
+    "        if \"beam\" in sd_xds.data_vars:\n",
     "            # compute area for multiple beams\n",
-    "            sd_ba = (\n",
-    "                sd_xds[\"beam\"].sel(beam_param=\"major\")\n",
-    "                * sd_xds[\"beam\"].sel(beam_param=\"minor\")\n",
+    "            sd_ba = sd_xds[\"beam\"].sel(beam_param=\"major\") * sd_xds[\"beam\"].sel(\n",
+    "                beam_param=\"minor\"\n",
     "            )\n",
     "        else:\n",
     "            sd_ba = _beam_area_single_beam(sd_xds)\n",
-    "        beam_ratio = int_ba/sd_ba\n",
+    "        beam_ratio = int_ba / sd_ba\n",
     "        beam_ratio = np.expand_dims(beam_ratio, -1)\n",
     "        beam_ratio = np.expand_dims(beam_ratio, -1)\n",
     "\n",
@@ -1824,29 +1798,24 @@
     "    print(\"beam ratio shape\", beam_ratio.shape)\n",
     "    print(\"sd_ap shape\", sd_ap.shape)\n",
     "    print(\"w shape\", w.shape)\n",
-    "    term = (\n",
-    "        (\n",
-    "            one_minus_w * int_ap\n",
-    "            + s * beam_ratio * sd_ap\n",
-    "        )\n",
-    "        / (one_minus_w + s * w)\n",
-    "    )\n",
+    "    term = (one_minus_w * int_ap + s * beam_ratio * sd_ap) / (one_minus_w + s * w)\n",
     "    feather_npary = _ifft_uv_to_lm(term, fft_plane).astype(mytype)\n",
     "    feather_xds = copy.deepcopy(int_xds)\n",
     "    display(feather_xds)\n",
     "    feather_xrary = xr.DataArray(\n",
-    "        feather_npary, coords=int_xds[\"sky\"].coords,\n",
-    "        dims=int_xds[\"sky\"].dims\n",
+    "        feather_npary, coords=int_xds[\"sky\"].coords, dims=int_xds[\"sky\"].dims\n",
     "    )\n",
     "    feather_xrary.rename(\"sky\")\n",
     "    feather_xds[\"sky\"] = feather_xrary\n",
     "    print(\"sky shape\", feather_xds[\"sky\"].shape)\n",
-    "    return feather_xds  \n",
+    "    return feather_xds\n",
+    "\n",
     "\n",
     "zn = \"int.zarr\"\n",
     "zo = \"sd.zarr\"\n",
     "from xradio.image import write_image\n",
     "import os\n",
+    "\n",
     "# imgs = [int_xds, sd_xds]\n",
     "if \"beam\" in int_xds.data_vars:\n",
     "    zn = \"int_mb.zarr\"\n",
@@ -1857,14 +1826,14 @@
     "    zo = \"sd_mb_1.zarr\"\n",
     "    if not os.path.exists(zo):\n",
     "        write_image(sd_xds, zo, \"zarr\")\n",
-    "    \n",
+    "\n",
     "zarr_names = [zn, zo]\n",
     "# debug = read_image(zn)\n",
     "# print(\"beam shape\", debug.beam.shape)\n",
     "\n",
     "input_parms = {}\n",
     "input_parms[\"input_data_store\"] = zarr_names\n",
-    "input_parms[\"axes\"] = ('l','m')#(3,4)\n",
+    "input_parms[\"axes\"] = (\"l\", \"m\")  # (3,4)\n",
     "# beam_ratio should be computed inside _feather if\n",
     "# at least one image has multiple beams\n",
     "input_parms[\"beam_ratio\"] = beam_ratio\n",
@@ -1877,10 +1846,10 @@
     "    node_task_data_mapping=node_task_data_mapping,\n",
     "    node_task=_feather,\n",
     "    input_parms=input_parms,\n",
-    "    in_memory_compute=False\n",
+    "    in_memory_compute=False,\n",
     ")\n",
     "\n",
-    "dask.visualize(graph, filename=\"map_graph\")\n"
+    "dask.visualize(graph, filename=\"map_graph\")"
    ]
   },
   {
@@ -10572,7 +10541,7 @@
     }
    ],
    "source": [
-    "type(res), type(res[0]),type(res[0][0]), type(res[0][0][0])"
+    "type(res), type(res[0]), type(res[0][0]), type(res[0][0][0])"
    ]
   },
   {
@@ -10676,15 +10645,13 @@
    ],
    "source": [
     "import dask.array as da\n",
+    "\n",
     "z = da.array(final_xds[\"sky\"].values)\n",
     "print(z)\n",
-    "final_xds[\"sky\"] = xr.DataArray(\n",
-    "    z, dims=(\n",
-    "        \"time\", \"polarization\", \"frequency\", \"l\", \"m\"\n",
-    "    )\n",
-    ")\n",
+    "final_xds[\"sky\"] = xr.DataArray(z, dims=(\"time\", \"polarization\", \"frequency\", \"l\", \"m\"))\n",
     "import xradio\n",
     "from xradio import image\n",
+    "\n",
     "image.write_image(final_xds, \"feather_test_0.im\", \"casa\")\n",
     "final_xds[\"sky\"].dtype"
    ]
