--- a/docs/astroviper_tutorial_calculate_stats.ipynb
+++ b/docs/astroviper_tutorial_calculate_stats.ipynb
@@ -2249,10 +2249,16 @@
    ],
    "source": [
     "from toolviper.dask.client import local_client\n",
-    "log_params = {'log_to_term':True,'log_level':'DEBUG'}\n",
-    "worker_log_params = {'log_to_term':True,'log_level':'DEBUG'}\n",
-    "#viper_client = local_client(cores=1, memory_limit=\"20GB\",log_params=log_params,worker_log_params=worker_log_params)\n",
-    "viper_client = local_client(cores=24, memory_limit=\"30GB\",log_params=log_params,worker_log_params=worker_log_params)\n",
+    "\n",
+    "log_params = {\"log_to_term\": True, \"log_level\": \"DEBUG\"}\n",
+    "worker_log_params = {\"log_to_term\": True, \"log_level\": \"DEBUG\"}\n",
+    "# viper_client = local_client(cores=1, memory_limit=\"20GB\",log_params=log_params,worker_log_params=worker_log_params)\n",
+    "viper_client = local_client(\n",
+    "    cores=24,\n",
+    "    memory_limit=\"30GB\",\n",
+    "    log_params=log_params,\n",
+    "    worker_log_params=worker_log_params,\n",
+    ")\n",
     "viper_client\n",
     "\n",
     "# import dask\n",
@@ -2281,8 +2287,9 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "pd.options.display.max_colwidth = 100\n",
-    "ps_store = '/.lustre/aoc/projects/ngvla/archive_ms_v4/ALMA/2019.1.01463.S/ms_v4/uid___A002_Xf07bba_Xbe5c_target.lsrk.vis.zarr'\n",
+    "ps_store = \"/.lustre/aoc/projects/ngvla/archive_ms_v4/ALMA/2019.1.01463.S/ms_v4/uid___A002_Xf07bba_Xbe5c_target.lsrk.vis.zarr\"\n",
     "\n",
     "from xradio.measurement_set.open_processing_set import open_processing_set\n",
     "\n",
@@ -2710,6 +2717,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "len(np.unique(ps.get_ps_freq_axis()))\n",
     "ps.get_ps_freq_axis()"
    ]
@@ -4033,7 +4041,9 @@
     }
    ],
    "source": [
-    "ps['uid___A002_Xf07bba_Xbe5c_target.lsrk_ddi_27_intent_OBSERVE_TARGET#ON_SOURCE_field_id_3']"
+    "ps[\n",
+    "    \"uid___A002_Xf07bba_Xbe5c_target.lsrk_ddi_27_intent_OBSERVE_TARGET#ON_SOURCE_field_id_3\"\n",
+    "]"
    ]
   },
   {
@@ -8007,7 +8017,10 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import dask\n",
-    "from graphviper.graph_tools.coordinate_utils import make_parallel_coord, make_frequency_coord\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    make_parallel_coord,\n",
+    "    make_frequency_coord,\n",
+    ")\n",
     "from graphviper.graph_tools import map, reduce\n",
     "from astroviper._domain._image._moment_max import _moment_max\n",
     "from astroviper.imaging._utils import _make_image\n",
@@ -8021,27 +8034,43 @@
     "# parallel_coords[\"time\"] = make_parallel_coord(coord=coord, n_chunks=24)\n",
     "\n",
     "ps_freq_axis = ps.get_ps_freq_axis()\n",
-    "parallel_coords[\"frequency\"] = make_parallel_coord(coord=ps_freq_axis, n_chunks=24*4)\n",
+    "parallel_coords[\"frequency\"] = make_parallel_coord(coord=ps_freq_axis, n_chunks=24 * 4)\n",
     "###############################\n",
     "\n",
     "# coord = ps['uid___A002_Xf07bba_Xbe5c_target.lsrk_ddi_27_intent_OBSERVE_TARGET#ON_SOURCE_field_id_3'].time.isel(time=slice(0,10))\n",
     "# parallel_coords[\"time\"] = make_parallel_coord(coord=coord, n_chunks=1)\n",
     "\n",
-    "from graphviper.graph_tools.coordinate_utils import interpolate_data_coords_onto_parallel_coords\n",
-    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(parallel_coords, ps)\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    interpolate_data_coords_onto_parallel_coords,\n",
+    ")\n",
+    "\n",
+    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(\n",
+    "    parallel_coords, ps\n",
+    ")\n",
     "display(HTML(dict_to_html(node_task_data_mapping)))\n",
     "\n",
     "# for xds_name in node_task_data_mapping[0]['data_selection']:\n",
-    "#     node_task_data_mapping[0]['data_selection'][xds_name]['frequency'] = slice(0,10) \n",
+    "#     node_task_data_mapping[0]['data_selection'][xds_name]['frequency'] = slice(0,10)\n",
     "# node_task_data_mapping[0]['parallel_dims'].append('frequency')\n",
     "# display(HTML(dict_to_html(node_task_data_mapping)))\n",
     "\n",
+    "\n",
     "def calc_stats(input_params):\n",
     "    import graphviper.utils.logger as logger\n",
-    "    from xradio.vis.load_processing_set import load_processing_set, processing_set_iterator\n",
+    "    from xradio.vis.load_processing_set import (\n",
+    "        load_processing_set,\n",
+    "        processing_set_iterator,\n",
+    "    )\n",
+    "\n",
     "    print(input_params[\"data_selection\"])\n",
-    "    ps_iter = processing_set_iterator(input_params[\"data_selection\"], input_params[\"input_data_store\"], input_params[\"input_data\"], data_variables=['VISIBILITY'], load_sub_datasets=False)\n",
-    "    \n",
+    "    ps_iter = processing_set_iterator(\n",
+    "        input_params[\"data_selection\"],\n",
+    "        input_params[\"input_data_store\"],\n",
+    "        input_params[\"input_data\"],\n",
+    "        data_variables=[\"VISIBILITY\"],\n",
+    "        load_sub_datasets=False,\n",
+    "    )\n",
+    "\n",
     "    min_vals = []\n",
     "    max_vals = []\n",
     "    for ms_xds in ps_iter:\n",
@@ -8051,36 +8080,44 @@
     "        min_vals.append(min_val)\n",
     "        max_vals.append(max_val)\n",
     "\n",
-    "    result = np.array([np.max(max_vals),np.min(min_vals)])\n",
-    "    logger.info('The max is for this chunk: ' + str(result))\n",
+    "    result = np.array([np.max(max_vals), np.min(min_vals)])\n",
+    "    logger.info(\"The max is for this chunk: \" + str(result))\n",
     "    return result\n",
     "\n",
     "\n",
     "input_params = {}\n",
-    "input_params['input_data_store'] = ps_store\n",
+    "input_params[\"input_data_store\"] = ps_store\n",
     "\n",
     "import time\n",
+    "\n",
     "viper_graph = map(\n",
     "    input_data=ps,\n",
     "    node_task_data_mapping=node_task_data_mapping,\n",
     "    node_task=calc_stats,\n",
     "    input_params=input_params,\n",
-    "    in_memory_compute=False\n",
+    "    in_memory_compute=False,\n",
     ")\n",
+    "\n",
     "\n",
     "def stats_reduce(graph_inputs, input_params):\n",
     "    import numpy as np\n",
-    "    stats_array = np.array(graph_inputs) #graph_inputs is a list of 2-element arrays (max and min values).\n",
-    "    max_val = stats_array[np.nanargmax(np.abs(stats_array[:,0])),0]\n",
-    "    min_val = stats_array[np.nanargmin(np.abs(stats_array[:,1])),1]\n",
-    "    return np.array([max_val,min_val])\n",
+    "\n",
+    "    stats_array = np.array(\n",
+    "        graph_inputs\n",
+    "    )  # graph_inputs is a list of 2-element arrays (max and min values).\n",
+    "    max_val = stats_array[np.nanargmax(np.abs(stats_array[:, 0])), 0]\n",
+    "    min_val = stats_array[np.nanargmin(np.abs(stats_array[:, 1])), 1]\n",
+    "    return np.array([max_val, min_val])\n",
+    "\n",
     "\n",
     "input_params = {}\n",
-    "viper_graph = reduce(viper_graph, stats_reduce, input_params, mode='tree') # mode \"tree\",\"single_node\n",
+    "viper_graph = reduce(\n",
+    "    viper_graph, stats_reduce, input_params, mode=\"tree\"\n",
+    ")  # mode \"tree\",\"single_node\n",
     "\n",
     "from graphviper.graph_tools import generate_dask_workflow\n",
-    "dask_graph = generate_dask_workflow(viper_graph)\n",
-    "\n"
+    "\n",
+    "dask_graph = generate_dask_workflow(viper_graph)"
    ]
   },
   {
@@ -8301,8 +8338,8 @@
    ],
    "source": [
     "start = time.time()\n",
-    "max_min=dask.compute(dask_graph)\n",
-    "print(time.time()-start)\n",
+    "max_min = dask.compute(dask_graph)\n",
+    "print(time.time() - start)\n",
     "max_min"
    ]
   },
