--- a/docs/atsroviper_tutorial_fft.ipynb
+++ b/docs/atsroviper_tutorial_fft.ipynb
@@ -22,6 +22,7 @@
     "# viper_client = local_client(cores=4, memory_limit=\"4GB\")\n",
     "\n",
     "import dask\n",
+    "\n",
     "dask.config.set(scheduler=\"synchronous\")"
    ]
   },
@@ -518,13 +519,11 @@
     }
    ],
    "source": [
-    "from xradio.image.image import (\n",
-    "    make_empty_sky_image\n",
-    ")\n",
+    "from xradio.image.image import make_empty_sky_image\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
-    "arcsec_to_rad = np.pi/180/3600\n",
+    "arcsec_to_rad = np.pi / 180 / 3600\n",
     "\n",
     "im_xds = make_empty_sky_image(\n",
     "    phase_center=[0.6, -0.2],\n",
@@ -1140,8 +1139,9 @@
    ],
    "source": [
     "import dask.array as da\n",
+    "\n",
     "sky = da.random.random_sample(\n",
-    "    [1,1,16,1024,1024], chunks=[1,1,2,1024,1024]\n",
+    "    [1, 1, 16, 1024, 1024], chunks=[1, 1, 2, 1024, 1024]\n",
     ").astype(\"float32\")\n",
     "xda = xr.DataArray(sky, coords=im_xds.coords, dims=im_xds.dims)\n",
     "im_xds[\"SKY\"] = xda\n",
@@ -1220,8 +1220,13 @@
     }
    ],
    "source": [
-    "from graphviper.graph_tools.coordinate_utils import interpolate_data_coords_onto_parallel_coords\n",
-    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(parallel_coords, input_data)\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    interpolate_data_coords_onto_parallel_coords,\n",
+    ")\n",
+    "\n",
+    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(\n",
+    "    parallel_coords, input_data\n",
+    ")\n",
     "display(HTML(dict_to_html(node_task_data_mapping)))"
    ]
   },
@@ -1252,44 +1257,49 @@
     "    display(HTML(dict_to_html(input_params)))\n",
     "\n",
     "    from xradio.image import load_image\n",
-    "    if input_params[\"input_data\"] is None: #Load \n",
+    "\n",
+    "    if input_params[\"input_data\"] is None:  # Load\n",
     "        img_xds = load_image(\n",
-    "            input_params[\"input_data_store\"], block_des=input_params[\"data_selection\"][\"img\"]\n",
+    "            input_params[\"input_data_store\"],\n",
+    "            block_des=input_params[\"data_selection\"][\"img\"],\n",
     "        )\n",
     "    else:\n",
-    "        img_xds = input_params[\"input_data\"]['img'] #In memory\n",
+    "        img_xds = input_params[\"input_data\"][\"img\"]  # In memory\n",
     "\n",
     "    display(img_xds)\n",
     "\n",
-    "    fft_plane = (img_xds['SKY'].dims.index(input_params[\"axes\"][0]),img_xds['SKY'].dims.index(input_params[\"axes\"][1]))\n",
-    "    print('fft_plane',fft_plane)\n",
+    "    fft_plane = (\n",
+    "        img_xds[\"SKY\"].dims.index(input_params[\"axes\"][0]),\n",
+    "        img_xds[\"SKY\"].dims.index(input_params[\"axes\"][1]),\n",
+    "    )\n",
+    "    print(\"fft_plane\", fft_plane)\n",
     "    aperture = np.fft.fftshift(\n",
-    "        np.fft.fft2(\n",
-    "            np.fft.ifftshift(img_xds.SKY, axes=fft_plane),\n",
-    "            axes=fft_plane\n",
-    "        ), axes=fft_plane\n",
-    "     ).real\n",
-    "    \n",
-    "    img_xds['APERTURE'] = xr.DataArray(aperture, dims=('time','polarization','frequency','u','v'))\n",
+    "        np.fft.fft2(np.fft.ifftshift(img_xds.SKY, axes=fft_plane), axes=fft_plane),\n",
+    "        axes=fft_plane,\n",
+    "    ).real\n",
+    "\n",
+    "    img_xds[\"APERTURE\"] = xr.DataArray(\n",
+    "        aperture, dims=(\"time\", \"polarization\", \"frequency\", \"u\", \"v\")\n",
+    "    )\n",
     "\n",
     "    return img_xds\n",
-    "   \n",
-    "    \n",
+    "\n",
     "\n",
     "input_params = {}\n",
     "input_params[\"input_data_store\"] = zarr_name\n",
-    "input_params[\"axes\"] = ('l','m')#(3,4)\n",
+    "input_params[\"axes\"] = (\"l\", \"m\")  # (3,4)\n",
     "\n",
     "viper_graph = map(\n",
     "    input_data=input_data,\n",
     "    node_task_data_mapping=node_task_data_mapping,\n",
     "    node_task=_fft2,\n",
     "    input_params=input_params,\n",
-    "    in_memory_compute=False\n",
+    "    in_memory_compute=False,\n",
     ")\n",
     "from graphviper.graph_tools import generate_dask_workflow\n",
+    "\n",
     "dask_graph = generate_dask_workflow(viper_graph)\n",
-    "dask.visualize(dask_graph, filename=\"map_graph\")\n"
+    "dask.visualize(dask_graph, filename=\"map_graph\")"
    ]
   },
   {
@@ -4045,7 +4055,7 @@
     }
    ],
    "source": [
-    "aperture_list[0][0]['SKY'].sel(polarization='I').isel(frequency=2,time=0).plot()"
+    "aperture_list[0][0][\"SKY\"].sel(polarization=\"I\").isel(frequency=2, time=0).plot()"
    ]
   },
   {
@@ -4076,7 +4086,9 @@
     }
    ],
    "source": [
-    "aperture_list[0][0]['APERTURE'].sel(polarization='I').isel(frequency=2,time=0).plot(vmin=-500, vmax=500)"
+    "aperture_list[0][0][\"APERTURE\"].sel(polarization=\"I\").isel(frequency=2, time=0).plot(\n",
+    "    vmin=-500, vmax=500\n",
+    ")"
    ]
   }
  ],
