--- a/docs/cupy_tutorial.ipynb
+++ b/docs/cupy_tutorial.ipynb
@@ -73,13 +73,13 @@
     "\n",
     "# Print the result\n",
     "print(\"\\nArray after scatter add operation 0:\")\n",
-    "print(result_array_scatter_add_0)  \n",
+    "print(result_array_scatter_add_0)\n",
     "\n",
     "print(\"\\nArray after scatter add operation 1:\")\n",
-    "print(result_array_scatter_add_1) \n",
+    "print(result_array_scatter_add_1)\n",
     "\n",
     "print(\"\\nDifference between scatter add 0 and 1:\")\n",
-    "print(result_array_scatter_add_0-result_array_scatter_add_1) \n",
+    "print(result_array_scatter_add_0 - result_array_scatter_add_1)\n",
     "print(\"Oh no, there is a difference!!!\")"
    ]
   },
@@ -141,7 +141,7 @@
     "\"\"\"\n",
     "\n",
     "# Compile the kernel\n",
-    "kernel = cp.RawKernel(kernel_code, 'scatter_add_example_kernel')\n",
+    "kernel = cp.RawKernel(kernel_code, \"scatter_add_example_kernel\")\n",
     "\n",
     "# Create Cupy arrays\n",
     "gpu_result_atomic_add_0 = cp.zeros(result_array_size, dtype=np.float32)\n",
@@ -152,8 +152,16 @@
     "grid_size = (array_size + block_size - 1) // block_size\n",
     "\n",
     "# Launch the kernel\n",
-    "kernel((grid_size,), (block_size,), (gpu_result_atomic_add_0, gpu_values, gpu_indices, array_size))\n",
-    "kernel((grid_size,), (block_size,), (gpu_result_atomic_add_1, gpu_values, gpu_indices, array_size))\n",
+    "kernel(\n",
+    "    (grid_size,),\n",
+    "    (block_size,),\n",
+    "    (gpu_result_atomic_add_0, gpu_values, gpu_indices, array_size),\n",
+    ")\n",
+    "kernel(\n",
+    "    (grid_size,),\n",
+    "    (block_size,),\n",
+    "    (gpu_result_atomic_add_1, gpu_values, gpu_indices, array_size),\n",
+    ")\n",
     "cp.cuda.stream.get_current_stream().synchronize()\n",
     "\n",
     "# Transfer GPU result array back to NumPy\n",
@@ -161,18 +169,18 @@
     "result_array_atomic_add_1 = gpu_result_atomic_add_1.get()\n",
     "\n",
     "print(\"\\nArray after atomic add operation:\")\n",
-    "print(result_array_atomic_add_0) \n",
+    "print(result_array_atomic_add_0)\n",
     "\n",
     "print(\"\\nArray after atomic add operation:\")\n",
-    "print(result_array_atomic_add_1) \n",
+    "print(result_array_atomic_add_1)\n",
     "\n",
     "print(\"\\nDifference between atomic add 0 and 1:\")\n",
-    "print(result_array_atomic_add_0-result_array_atomic_add_1) \n",
+    "print(result_array_atomic_add_0 - result_array_atomic_add_1)\n",
     "print(\"Oh no, there is a difference!!!\")\n",
     "\n",
     "print(\"\\nDifference atomic add 0 and scatter add 0:\")\n",
-    "print(result_array_scatter_add_0-result_array_atomic_add_0) \n",
-    "print(\"Oh no, there is a difference!!!\")\n"
+    "print(result_array_scatter_add_0 - result_array_atomic_add_0)\n",
+    "print(\"Oh no, there is a difference!!!\")"
    ]
   },
   {
