--- a/examples/convert_spectral_reference_frame.ipynb
+++ b/examples/convert_spectral_reference_frame.ipynb
@@ -58,10 +58,11 @@
     }
    ],
    "source": [
-    "#Download the data\n",
+    "# Download the data\n",
     "ps_store = \"Antennae_North.cal.lsrk.py39.vis.zarr\"\n",
     "from toolviper.utils.data import download, list_files\n",
-    "download(file=ps_store) "
+    "\n",
+    "download(file=ps_store)"
    ]
   },
   {
@@ -350,8 +351,9 @@
     }
    ],
    "source": [
-    "#Inspect Data (Only meta data is loaded)\n",
+    "# Inspect Data (Only meta data is loaded)\n",
     "from xradio.measurement_set import open_processing_set\n",
+    "\n",
     "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
     "ps = open_processing_set(ps_store, intents=intents)\n",
     "ps.summary()"
@@ -2007,14 +2009,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The convert_spectral_reference_frame function should only process a single MSv4 at a time that is already loaded into memory.\n",
+    "# The convert_spectral_reference_frame function should only process a single MSv4 at a time that is already loaded into memory.\n",
+    "\n",
     "\n",
     "def convert_spectral_reference_frame(ms_xds, output_reference_frame):\n",
     "    \"\"\"To Do\"\"\"\n",
     "    return ms_xds\n",
     "\n",
     "\n",
-    "ms_xds_converted = convert_spectral_reference_frame(ms_xds, output_reference_frame=\"TOPO\")"
+    "ms_xds_converted = convert_spectral_reference_frame(\n",
+    "    ms_xds, output_reference_frame=\"TOPO\"\n",
+    ")"
    ]
   }
  ],
