--- a/docs/astroviper_tutorial_spectral_moment.ipynb
+++ b/docs/astroviper_tutorial_spectral_moment.ipynb
@@ -535,6 +535,7 @@
    ],
    "source": [
     "from toolviper.dask.client import local_client\n",
+    "\n",
     "viper_client = local_client(cores=4, memory_limit=\"4GB\")\n",
     "viper_client\n",
     "\n",
@@ -577,7 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xradio.correlated_data.load_processing_set import  processing_set_iterator"
+    "from xradio.correlated_data.load_processing_set import processing_set_iterator"
    ]
   },
   {
@@ -611,20 +612,27 @@
    "source": [
     "phase_centers = []\n",
     "for ms_name, ms_xds in ps.items():\n",
-    "    #print(ms_xds.VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER)\n",
+    "    # print(ms_xds.VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER)\n",
     "    vals = ms_xds.VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER.values\n",
     "    phase_centers.append(vals)\n",
-    "    \n",
-    "    if (vals[1]< -0.32929) and (vals[1]> -0.32931) and (vals[0]< 3.14981) and (vals[0]> 3.14980):\n",
+    "\n",
+    "    if (\n",
+    "        (vals[1] < -0.32929)\n",
+    "        and (vals[1] > -0.32931)\n",
+    "        and (vals[0] < 3.14981)\n",
+    "        and (vals[0] > 3.14980)\n",
+    "    ):\n",
     "        print(\"Found phase center\", ms_name, vals)\n",
-    "    \n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "phase_centers = np.array(phase_centers)\n",
     "phase_centers.shape\n",
     "phase_centers = np.unique(phase_centers, axis=0)\n",
     "print(phase_centers.shape)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.scatter(phase_centers[:, 0], phase_centers[:, 1])\n",
     "plt.show()\n",
@@ -668,7 +676,10 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import dask\n",
-    "from graphviper.graph_tools.coordinate_utils import make_parallel_coord, make_frequency_coord\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    make_parallel_coord,\n",
+    "    make_frequency_coord,\n",
+    ")\n",
     "from graphviper.graph_tools import map, reduce\n",
     "from astroviper._domain._image._moment_max import _moment_max\n",
     "from astroviper.imaging._utils import _make_image\n",
@@ -676,7 +687,7 @@
     "from IPython.display import HTML, display\n",
     "\n",
     "\n",
-    "#ps_store = \"Antennae_North.cal.lsrk.split.py39.v3.vis.zarr\"\n",
+    "# ps_store = \"Antennae_North.cal.lsrk.split.py39.v3.vis.zarr\"\n",
     "ps_store = \"Antennae_North.cal.lsrk.py39.v3.vis.zarr\"\n",
     "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
     "ps = open_processing_set(ps_store, intents=intents)\n",
@@ -687,19 +698,21 @@
     "grid_params[\"image_size\"] = [500, 500]\n",
     "grid_params[\"cell_size\"] = np.array([-0.13, 0.13]) * np.pi / (180 * 3600)\n",
     "grid_params[\"fft_padding\"] = 1.0\n",
-    "#grid_params[\"phase_direction\"] = ps[\n",
+    "# grid_params[\"phase_direction\"] = ps[\n",
     "#    \"Antennae_North.cal.lsrk_ddi_0_intent_OBSERVE_TARGET#ON_SOURCE_field_id_12\"\n",
-    "#].VISIBILITY.attrs[\"field_info\"][\"phase_direction\"]\n",
-    "grid_params[\"phase_direction\"] = ps['Antennae_North.cal.lsrk_34'].VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER # [ 3.14980724 -0.32929961]\n",
-    "#grid_params[\"phase_direction\"] = ps['Antennae_North.cal.lsrk.split_04'].VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER\n",
+    "# ].VISIBILITY.attrs[\"field_info\"][\"phase_direction\"]\n",
+    "grid_params[\"phase_direction\"] = ps[\n",
+    "    \"Antennae_North.cal.lsrk_34\"\n",
+    "].VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER  # [ 3.14980724 -0.32929961]\n",
+    "# grid_params[\"phase_direction\"] = ps['Antennae_North.cal.lsrk.split_04'].VISIBILITY.field_and_source_xds.FIELD_PHASE_CENTER\n",
     "input_params = {}\n",
     "input_params[\"grid_params\"] = grid_params\n",
     "input_params[\"to_disk\"] = False\n",
-    "input_params[\"input_data_store\"]=ps_store\n",
+    "input_params[\"input_data_store\"] = ps_store\n",
     "input_params[\"polarization\"] = ms_xds.polarization\n",
     "input_params[\"time\"] = [0]\n",
     "input_params[\"frequency\"] = None\n",
-    "input_params['data_group'] = \"base\"\n",
+    "input_params[\"data_group\"] = \"base\"\n",
     "\n",
     "parallel_coords = {}\n",
     "# coord = make_frequency_coord(\n",
@@ -707,27 +720,34 @@
     "#     freq_delta=11231488.981445312,\n",
     "#     n_channels=166,\n",
     "# )\n",
-    "#coord = ps['Antennae_North.cal.lsrk.split_04'].frequency\n",
-    "coord = ps['Antennae_North.cal.lsrk_34'].frequency\n",
+    "# coord = ps['Antennae_North.cal.lsrk.split_04'].frequency\n",
+    "coord = ps[\"Antennae_North.cal.lsrk_34\"].frequency\n",
     "\n",
     "parallel_coords[\"frequency\"] = make_parallel_coord(coord=coord, n_chunks=20)\n",
-    "from graphviper.graph_tools.coordinate_utils import interpolate_data_coords_onto_parallel_coords\n",
-    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(parallel_coords, ps)\n",
+    "from graphviper.graph_tools.coordinate_utils import (\n",
+    "    interpolate_data_coords_onto_parallel_coords,\n",
+    ")\n",
+    "\n",
+    "node_task_data_mapping = interpolate_data_coords_onto_parallel_coords(\n",
+    "    parallel_coords, ps\n",
+    ")\n",
     "display(HTML(dict_to_html(node_task_data_mapping)))\n",
     "\n",
     "import time\n",
+    "\n",
     "graph = map(\n",
     "    input_data=ps,\n",
     "    node_task_data_mapping=node_task_data_mapping,\n",
     "    node_task=_make_image,\n",
     "    input_params=input_params,\n",
-    "    in_memory_compute=False\n",
+    "    in_memory_compute=False,\n",
     ")\n",
     "\n",
     "input_params = {}\n",
     "viper_graph = reduce(graph, _moment_max, input_params)\n",
     "\n",
     "from graphviper.graph_tools import generate_dask_workflow\n",
+    "\n",
     "dask_graph = generate_dask_workflow(viper_graph)"
    ]
   },
@@ -1367,7 +1387,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure()\n",
-    "img_xds.SKY.isel(polarization=0, frequency=0, dummy=0).plot.imshow(cmap='viridis',vmin=0.0)\n",
+    "img_xds.SKY.isel(polarization=0, frequency=0, dummy=0).plot.imshow(\n",
+    "    cmap=\"viridis\", vmin=0.0\n",
+    ")\n",
     "plt.figure()\n",
     "img_xds.PRIMARY_BEAM.isel(polarization=0, frequency=0, dummy=0).plot()"
    ]
