--- a/docs/feather_tutorial_create_initial_images.ipynb
+++ b/docs/feather_tutorial_create_initial_images.ipynb
@@ -25,6 +25,7 @@
    ],
    "source": [
     "import pkg_resources, os\n",
+    "\n",
     "casa_data_dir = pkg_resources.resource_filename(\"casadata\", \"__data__\")\n",
     "rc_file = open(os.path.expanduser(\"~/.casarc\"), \"a+\")  # append mode\n",
     "rc_file.write(\"\\nmeasures.directory: \" + casa_data_dir)\n",
@@ -614,15 +615,14 @@
     }
    ],
    "source": [
-    "from xradio.image.image import (\n",
-    "    make_empty_sky_image\n",
-    ")\n",
+    "from xradio.image.image import make_empty_sky_image\n",
     "import numpy as np\n",
-    "rad_per_arcsec = np.pi/180/3600\n",
+    "\n",
+    "rad_per_arcsec = np.pi / 180 / 3600\n",
     "skel_xds = make_empty_sky_image(\n",
     "    phase_center=[0.6, -0.2],\n",
     "    image_size=imsize,\n",
-    "    cell_size=[15*rad_per_arcsec, 15*rad_per_arcsec],\n",
+    "    cell_size=[15 * rad_per_arcsec, 15 * rad_per_arcsec],\n",
     "    chan_coords=np.linspace(1.4e9, 1.5e9, nchan),\n",
     "    pol_coords=[\"I\"],\n",
     "    time_coords=[0],\n",
@@ -1232,11 +1232,11 @@
     "\n",
     "sel_dict = {}\n",
     "if imsize[0] < 4096:\n",
-    "    blc = 2048 - imsize[0]//2\n",
+    "    blc = 2048 - imsize[0] // 2\n",
     "    l_slice = slice(blc, blc + imsize[0])\n",
     "    sel_dict[\"l\"] = l_slice\n",
     "if imsize[1] < 4096:\n",
-    "    blc = 2048 - imsize[1]//2\n",
+    "    blc = 2048 - imsize[1] // 2\n",
     "    m_slice = slice(blc, blc + imsize[1])\n",
     "    sel_dict[\"m\"] = m_slice\n",
     "xds_sd_temp = read_image(\"feather_sim_sd_c1_pI.im\").isel(sel_dict)\n",
@@ -1834,7 +1834,7 @@
    ],
    "source": [
     "xds_int_temp = read_image(\"feather_sim_vla_c1_pI.im\").isel(sel_dict)\n",
-    "#xds_int_temp\n",
+    "# xds_int_temp\n",
     "xds_int_temp"
    ]
   },
@@ -2402,12 +2402,11 @@
    "source": [
     "import dask.array as da\n",
     "import xarray as xr\n",
+    "\n",
     "dm = skel_xds.sizes\n",
     "data = da.zeros(\n",
-    "    [\n",
-    "        dm[\"time\"], dm[\"polarization\"],\n",
-    "        dm[\"frequency\"], dm[\"l\"], dm[\"m\"]\n",
-    "    ], dtype=np.float32\n",
+    "    [dm[\"time\"], dm[\"polarization\"], dm[\"frequency\"], dm[\"l\"], dm[\"m\"]],\n",
+    "    dtype=np.float32,\n",
     ")\n",
     "zeros = xr.DataArray(data=data, coords=skel_xds.coords, dims=skel_xds.dims)\n",
     "zeros"
@@ -3008,21 +3007,17 @@
    "source": [
     "import copy\n",
     "\n",
-    "sky = xr.DataArray(\n",
-    "    zeros.copy(), coords=skel_xds.coords, dims=skel_xds.dims\n",
-    ")\n",
+    "sky = xr.DataArray(zeros.copy(), coords=skel_xds.coords, dims=skel_xds.dims)\n",
     "for i in (0, 1):\n",
     "    print(i)\n",
     "    xds = copy.deepcopy(skel_xds)\n",
     "    xds[\"sky\"] = sky.copy()\n",
     "    for j in range(0, nchan, 16):\n",
     "        min_chan = j\n",
-    "        max_chan = min(j+16, nchan)\n",
+    "        max_chan = min(j + 16, nchan)\n",
     "        fx = xds_sd_temp if i == 0 else xds_int_temp\n",
     "        print(id(fx))\n",
-    "        xds[\"sky\"][{\"frequency\": slice(min_chan, max_chan)}] = (\n",
-    "            fx[\"sky\"].values\n",
-    "        )\n",
+    "        xds[\"sky\"][{\"frequency\": slice(min_chan, max_chan)}] = fx[\"sky\"].values\n",
     "        print(f\"xds {id(xds)}\")\n",
     "    if i == 0:\n",
     "        xds_sd = xds\n",
@@ -3030,7 +3025,7 @@
     "    else:\n",
     "        xds_int = xds\n",
     "        xds_int.attrs[\"beam\"] = copy.deepcopy(xds_int_temp.attrs[\"beam\"])\n",
-    "    \n",
+    "\n",
     "xds_sd"
    ]
   },
@@ -3052,17 +3047,23 @@
     }
    ],
    "source": [
-    "bytes_in_dtype = {'float32':4,'double':8,'complex':16}\n",
+    "bytes_in_dtype = {\"float32\": 4, \"double\": 8, \"complex\": 16}\n",
     "\n",
-    "#chunking_dims_sizes = {'frequency':int_xds[\"sky\"].sizes['frequency']}\n",
-    "#memory_singleton_chunk = 3*np.product(np.array(list(chunking_dims_sizes.values())))\n",
-    "xds_sd['sky'].sizes['frequency']\n",
+    "# chunking_dims_sizes = {'frequency':int_xds[\"sky\"].sizes['frequency']}\n",
+    "# memory_singleton_chunk = 3*np.product(np.array(list(chunking_dims_sizes.values())))\n",
+    "xds_sd[\"sky\"].sizes[\"frequency\"]\n",
     "\n",
-    "singleton_chunk_sizes = dict(xds_sd['sky'].sizes) \n",
-    "del singleton_chunk_sizes['frequency'] #Remove dimensions that will be chuncked on.\n",
+    "singleton_chunk_sizes = dict(xds_sd[\"sky\"].sizes)\n",
+    "del singleton_chunk_sizes[\"frequency\"]  # Remove dimensions that will be chuncked on.\n",
     "fudge_factor = 1.1\n",
     "n_images_in_memory = 3.0\n",
-    "memory_singleton_chunk = n_images_in_memory*np.product(np.array(list(singleton_chunk_sizes.values())))*fudge_factor*bytes_in_dtype[str(xds_sd['sky'].dtype)]/(1024**3)\n",
+    "memory_singleton_chunk = (\n",
+    "    n_images_in_memory\n",
+    "    * np.product(np.array(list(singleton_chunk_sizes.values())))\n",
+    "    * fudge_factor\n",
+    "    * bytes_in_dtype[str(xds_sd[\"sky\"].dtype)]\n",
+    "    / (1024**3)\n",
+    ")\n",
     "\n",
     "\n",
     "memory_singleton_chunk"
@@ -3153,6 +3154,7 @@
     "import os, shutil\n",
     "\n",
     "from xradio.image import write_image\n",
+    "\n",
     "for xds, outfile in zip([xds_sd, xds_int], [\"sd.zarr\", \"int.zarr\"]):\n",
     "    if os.path.exists(outfile):\n",
     "        shutil.rmtree(outfile)\n",
