--- a/docs/feather_tutorial_v2.ipynb
+++ b/docs/feather_tutorial_v2.ipynb
@@ -78,14 +78,26 @@
    ],
    "source": [
     "from graphviper.dask.client import local_client\n",
-    "log_params = {'log_level':'DEBUG'}\n",
-    "worker_log_params = {'log_level':'DEBUG'}\n",
-    "viper_client = local_client(cores=2, memory_limit=\"4GiB\",log_params=log_params,worker_log_params=worker_log_params)\n",
-    "#viper_client = local_client(serial_execution=True)\n",
+    "\n",
+    "log_params = {\"log_level\": \"DEBUG\"}\n",
+    "worker_log_params = {\"log_level\": \"DEBUG\"}\n",
+    "viper_client = local_client(\n",
+    "    cores=2,\n",
+    "    memory_limit=\"4GiB\",\n",
+    "    log_params=log_params,\n",
+    "    worker_log_params=worker_log_params,\n",
+    ")\n",
+    "# viper_client = local_client(serial_execution=True)\n",
     "# viper_client\n",
     "\n",
     "from astroviper.imaging import feather_v2\n",
-    "feather_v2(outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True}, highres= 'int.zarr', lowres= 'sd.zarr', sdfactor=1)"
+    "\n",
+    "feather_v2(\n",
+    "    outim={\"name\": \"feathered_image.img.zarr\", \"format\": \"zarr\", \"overwrite\": True},\n",
+    "    highres=\"int.zarr\",\n",
+    "    lowres=\"sd.zarr\",\n",
+    "    sdfactor=1,\n",
+    ")"
    ]
   },
   {
@@ -117,12 +129,14 @@
    ],
    "source": [
     "from xradio.image import load_image, read_image\n",
+    "\n",
     "feather_xds = load_image(\"feathered_image.img.zarr\")\n",
     "\n",
     "\n",
     "import numpy as np\n",
+    "\n",
     "np.nanmax(np.abs(feather_xds.SKY.values))\n",
-    "feather_xds.SKY.isel(polarization=0,frequency=1).plot()"
+    "feather_xds.SKY.isel(polarization=0, frequency=1).plot()"
    ]
   },
   {
